lesson progress update swagger updated
